Fixes overlapping issue

--- a/ui/public/styles.css
+++ b/ui/public/styles.css
@@ -22,7 +22,6 @@ body {
 
 header {
   background-color: #f5ba13;
-  margin: auto -16px;
   padding: 16px 32px;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
 }
@@ -65,6 +64,9 @@ footer p {
   width: 300px;
   margin: 16px;
   float: left;
+
+  /* Fixes overlapping issue */
+  z-index: 1;
 }
 .note h1 {
   font-size: 1.1em;
@@ -123,7 +125,7 @@ p.location {
 form.create-note {
   position: relative;
   width: 480px;
-  margin: 30px auto auto;
+  margin: 30px auto 50px;
   background: #fff;
   padding: 15px;
   border-radius: 7px;
